v3/Models/Comment.md
# Comment
## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
| **author** | [**UserDetails**](UserDetails.md) | The ID of the user who created the comment. | [optional] [default to null] |
| **body** | [**oas_any_type_not_mapped**](.md) | The comment text in [Atlassian Document Format](https://developer.atlassian.com/cloud/jira/platform/apis/document/structure/). | [optional] [default to null] |
| **created** | **Date** | The date and time at which the comment was created. | [optional] [default to null] |
| **id** | **String** | The ID of the comment. | [optional] [default to null] |
| **jsdAuthorCanSeeRequest** | **Boolean** | Whether the comment was added from an email sent by a person who is not part of the issue. See [Allow external emails to be added as comments on issues](https://support.atlassian.com/jira-service-management-cloud/docs/allow-external-emails-to-be-added-as-comments-on-issues/)for information on setting up this feature. | [optional] [default to null] |
| **jsdPublic** | **Boolean** | Whether the comment is visible in Jira Service Desk. Defaults to true when comments are created in the Jira Cloud Platform. This includes when the site doesn&#39;t use Jira Service Desk or the project isn&#39;t a Jira Service Desk project and, therefore, there is no Jira Service Desk for the issue to be visible on. To create a comment with its visibility in Jira Service Desk set to false, use the Jira Service Desk REST API [Create request comment](https://developer.atlassian.com/cloud/jira/service-desk/rest/#api-rest-servicedeskapi-request-issueIdOrKey-comment-post) operation. | [optional] [default to null] |
| **properties** | [**List**](EntityProperty.md) | A list of comment properties. Optional on create and update. | [optional] [default to null] |
| **renderedBody** | **String** | The rendered version of the comment. | [optional] [default to null] |
| **self** | **String** | The URL of the comment. | [optional] [default to null] |
| **updateAuthor** | [**UserDetails**](UserDetails.md) | The ID of the user who updated the comment last. | [optional] [default to null] |
| **updated** | **Date** | The date and time at which the comment was updated last. | [optional] [default to null] |
| **visibility** | [**Visibility**](Visibility.md) | The group or role to which this comment is visible. Optional on create and update. | [optional] [default to null] |

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

